--- a/AmesHousing.ipynb
+++ b/AmesHousing.ipynb
@@ -10,6 +10,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "46c3a254-6fd2-494f-8427-2e990d9dce8b",
+   "metadata": {},
+   "source": [
+    "## Warning: Only run one of regression or classification\n",
+    "### Avoid running both together"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c7b8174d-4c54-4637-9095-b5b1dab67dcd",
    "metadata": {},
    "source": [
@@ -514,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "20e741f4-25e8-4bfe-ba0f-7bec0167c07b",
    "metadata": {},
    "outputs": [],
@@ -533,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f21fa643-49c7-4a99-ba90-620786cd08c1",
    "metadata": {},
    "outputs": [],
@@ -587,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c967c043-4c7d-4648-afca-41694ac164b8",
    "metadata": {},
    "outputs": [],
@@ -596,7 +605,7 @@
     "                          bins=[0,150000, 300000, np.inf],\n",
     "                          labels=['Low','Medium','High'])\n",
     "\n",
-    "x = df.drop(columns=['SalePrice','PriceCategory'])\n",
+    "X = df.drop(columns=['SalePrice','PriceCategory'])\n",
     "y = df['PriceCategory']"
    ]
   },
@@ -610,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "157ab870-1a21-49fb-853d-c522debdb134",
    "metadata": {},
    "outputs": [],
@@ -629,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "54baa0f4-90de-49a7-9081-a573155c1e11",
    "metadata": {},
    "outputs": [],
@@ -647,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a51047dd-b684-43c6-9c88-cba6e5417d1f",
    "metadata": {},
    "outputs": [],
@@ -675,10 +684,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "9df92651-1845-4fbc-bea2-4b0f92fd9f71",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using CUDA GPU\n"
+     ]
+    }
+   ],
    "source": [
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "if not torch.cuda.is_available():\n",
@@ -697,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "f0ed453e-0be7-4da9-90a5-18b42176be87",
    "metadata": {},
    "outputs": [],
@@ -735,13 +752,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "d9c4caf7-1d95-4b7a-9c8a-7b44d0023689",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_train_tensor = torch.tensor(y_train.values, dtype=torch.long).to(device)\n",
-    "y_test_tensor = torch.tensor(y_test.values, dtype=torch.long).to(device)"
+    "y_train_tensor = torch.tensor(y_train, dtype=torch.long).to(device)\n",
+    "y_test_tensor = torch.tensor(y_test, dtype=torch.long).to(device)"
    ]
   },
   {
@@ -801,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "eb1b0e7b-94ae-4d7c-9a84-612b2bc78cf6",
    "metadata": {},
    "outputs": [],
@@ -820,6 +837,464 @@
     "    def forward(self, x):\n",
     "        return self.fc(x)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f38f048f-3aa5-46de-bf24-9401d0fd64d4",
+   "metadata": {},
+   "source": [
+    "### Training the Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f96f351-a772-4261-97f1-7e58b2467787",
+   "metadata": {},
+   "source": [
+    "#### Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d75640c1-d51d-414a-998b-bd745e848ed5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = RegressionModel(X_train.shape[1]).to(device)\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "\n",
+    "epochs = 100\n",
+    "for epoch in range(epochs):\n",
+    "    model.train()\n",
+    "    outputs = model(X_train_tensor)\n",
+    "    loss = criterion(outputs, y_train_tensor)\n",
+    "\n",
+    "    optimizer.zero_grad()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    if (epoch+1)&10 ==0:\n",
+    "        print(f\"Epoch [{epoch+1}/{epochs}], Loss: {loss.item():.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "566540df-4599-47ac-b8d6-b8cea0576385",
+   "metadata": {},
+   "source": [
+    "#### Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "55e2c13f-15b2-4244-93d0-fb96ceed5a5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/100], Loss: 1.0721\n",
+      "Epoch [4/100], Loss: 1.0721\n",
+      "Epoch [5/100], Loss: 1.0721\n",
+      "Epoch [16/100], Loss: 1.0721\n",
+      "Epoch [17/100], Loss: 1.0721\n",
+      "Epoch [20/100], Loss: 1.0721\n",
+      "Epoch [21/100], Loss: 1.0721\n",
+      "Epoch [32/100], Loss: 1.0721\n",
+      "Epoch [33/100], Loss: 1.0721\n",
+      "Epoch [36/100], Loss: 1.0721\n",
+      "Epoch [37/100], Loss: 1.0721\n",
+      "Epoch [48/100], Loss: 1.0721\n",
+      "Epoch [49/100], Loss: 1.0721\n",
+      "Epoch [52/100], Loss: 1.0721\n",
+      "Epoch [53/100], Loss: 1.0721\n",
+      "Epoch [64/100], Loss: 1.0721\n",
+      "Epoch [65/100], Loss: 1.0721\n",
+      "Epoch [68/100], Loss: 1.0721\n",
+      "Epoch [69/100], Loss: 1.0721\n",
+      "Epoch [80/100], Loss: 1.0721\n",
+      "Epoch [81/100], Loss: 1.0721\n",
+      "Epoch [84/100], Loss: 1.0721\n",
+      "Epoch [85/100], Loss: 1.0721\n",
+      "Epoch [96/100], Loss: 1.0721\n",
+      "Epoch [97/100], Loss: 1.0721\n",
+      "Epoch [100/100], Loss: 1.0721\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_classes = len(np.unique(y_train))\n",
+    "model = ClassificationModel(input_dim=X_train.shape[1], output_dim=num_classes).to(device)\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "\n",
+    "epochs = 100\n",
+    "for epoch in range(epochs):\n",
+    "    model.train()\n",
+    "    outputs = model(X_train_tensor)\n",
+    "    loss = criterion(outputs, y_train_tensor)\n",
+    "\n",
+    "    optimizer.zero_grad()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    if (epoch+1)&10 ==0:\n",
+    "        print(f\"Epoch [{epoch+1}/{epochs}], Loss: {loss.item():.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f42b9bfb-da4c-4b1c-a1bb-c08722fb7271",
+   "metadata": {},
+   "source": [
+    "### Evaluating the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b14e12a-f0ea-476a-8956-6851088a42fa",
+   "metadata": {},
+   "source": [
+    "#### Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdb6c3d2-3756-4617-abc0-28c231015b8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.eval()\n",
+    "preds = model(X_test_tensor).detach().cpu().numpy()\n",
+    "rmse = np.sqrt(mean_squared_error(y_test, preds))\n",
+    "print(\"RMSE:\", rmse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "285700ef-6e0b-4e49-ac9d-9c7bb0952029",
+   "metadata": {},
+   "source": [
+    "#### Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "0ee41d2a-0eb7-48f8-aea0-c39af2f4e0da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.31569965870307165\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.eval()\n",
+    "outputs = model(X_test_tensor)\n",
+    "_, predicted = torch.max(outputs, 1)\n",
+    "acc = accuracy_score(y_test, predicted.cpu().numpy())\n",
+    "print(\"Accuracy:\", acc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48edb3b9-c6f8-47f1-b32c-8cd2e4763e79",
+   "metadata": {},
+   "source": [
+    "### Saving or exporting the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "465b9c84-dc97-4a8b-ab3d-481ee66d219c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(), 'house_model.pth')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af45dc77-8ad1-40f6-a0a8-250ae252f170",
+   "metadata": {},
+   "source": [
+    "### Loading the saved model in order to make predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e38e769f-3e83-4a7e-b64f-c2421fef88ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HousePriceModel(nn.Module):\n",
+    "    def __init__(self, input_dim):\n",
+    "        super(HousePriceModel, self).__init__()\n",
+    "        self.fc = nn.Sequential(   # <--- match this name\n",
+    "            nn.Linear(input_dim, 128),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(128, 64),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(64, 3)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.fc(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "cf1b1925-f685-49e0-9187-811cec791a44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_size = X_train.shape[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "92f2c7d9-9011-4911-bea4-6025916d11a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HousePriceModel(\n",
+       "  (fc): Sequential(\n",
+       "    (0): Linear(in_features=221, out_features=128, bias=True)\n",
+       "    (1): ReLU()\n",
+       "    (2): Linear(in_features=128, out_features=64, bias=True)\n",
+       "    (3): ReLU()\n",
+       "    (4): Linear(in_features=64, out_features=3, bias=True)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = HousePriceModel(input_size)\n",
+    "model.load_state_dict(torch.load('house_model.pth'))\n",
+    "model.eval() # Set to evaluation mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e3681c5d-711c-469a-aadf-cc4103d4ed6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example input: match exact preprocessing pipeline used in training\n",
+    "# For example, let's use the first row of X_test (after preprocessing)\n",
+    "sample_input = X_test[0].reshape(1, -1)  # shape: (1, input_dim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "a2413125-cf0c-41d9-907e-920dd71ca301",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_tensor = torch.tensor(sample_input, dtype=torch.float32)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b51f480-0e5c-4afa-8e9e-8cf7a1e20bcf",
+   "metadata": {},
+   "source": [
+    "### Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ee99670d-460e-410c-ab77-a24430963c77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make sure this matches your regression model (output_dim = 1)\n",
+    "with torch.no_grad():\n",
+    "    output = model(input_tensor)\n",
+    "    predicted_price = output.item()\n",
+    "\n",
+    "print(f\"Predicted Sale Price: ${predicted_price:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b4e9f77-f615-46c6-ae87-a5f13ad26074",
+   "metadata": {},
+   "source": [
+    "### Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "1e0d451d-4bfd-4f56-822a-c9e89bf7202f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted Price Category: High\n"
+     ]
+    }
+   ],
+   "source": [
+    "with torch.no_grad():\n",
+    "    output = model(input_tensor)\n",
+    "    predicted_class = torch.argmax(output, dim=1).item()\n",
+    "\n",
+    "# Optional: Map predicted_class to label\n",
+    "class_labels = {0: \"Low\", 1: \"Medium\", 2: \"High\"}\n",
+    "print(f\"Predicted Price Category: {class_labels[predicted_class]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba04b7d8-b2c5-40b8-875f-58f347a02acc",
+   "metadata": {},
+   "source": [
+    "## Manual Input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "81960d7f-7d93-4e5a-9575-59f25b29e72e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Recreate the same model architecture as when training\n",
+    "class HousePriceModel(nn.Module):\n",
+    "    def __init__(self, input_dim, output_dim):\n",
+    "        super(HousePriceModel, self).__init__()\n",
+    "        self.fc = nn.Sequential(\n",
+    "            nn.Linear(input_dim, 128),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(128, 64),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(64, output_dim)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.fc(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "705d2638-7486-4e30-af37-559bb0352560",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HousePriceModel(\n",
+       "  (fc): Sequential(\n",
+       "    (0): Linear(in_features=221, out_features=128, bias=True)\n",
+       "    (1): ReLU()\n",
+       "    (2): Linear(in_features=128, out_features=64, bias=True)\n",
+       "    (3): ReLU()\n",
+       "    (4): Linear(in_features=64, out_features=3, bias=True)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_size = X_test.shape[1]\n",
+    "output_size = 3  # Low, Medium, High\n",
+    "model = HousePriceModel(input_size, output_size).to(device)\n",
+    "model.load_state_dict(torch.load('house_model.pth'))\n",
+    "model.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "8e31e4f1-203c-44ed-b785-3f85725a4fe2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example: Pick any already preprocessed row from X_test\n",
+    "manual_input = X_test[238].reshape(1, -1)  # Use any index (not based on y_test!)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "02be1320-8034-46d3-bc3b-b067344f271d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert to tensor\n",
+    "input_tensor = torch.tensor(manual_input).float().to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "a16eb2d5-6908-4736-85ca-1ad06ffcdd8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make prediction\n",
+    "with torch.no_grad():\n",
+    "    output = model(input_tensor)\n",
+    "    predicted_class = torch.argmax(output, dim=1).item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "0884e302-3771-46f7-ab91-ebfb351cb5fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted House Price Category: High\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mapping label indices\n",
+    "class_labels = ['Low', 'Medium', 'High']\n",
+    "print(\"Predicted House Price Category:\", class_labels[predicted_class])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3753cb2c-683a-4eb4-af57-fc68fe9a4e0b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
